--- a/courses/ProbasEfreiS3/exos1.html
+++ b/courses/ProbasEfreiS3/exos1.html
@@ -523,7 +523,20 @@ ul.task-list li input[type="checkbox"] {
 <li>Soit <span class="math inline">\((i,j) \, \in \, \{1,\ldots,6\} \times \{0,\ldots,6\}\)</span>. Que vaut <span class="math inline">\(P(Y=j|X=i)\)</span>.</li>
 <li>Déterminer la loi du couple <span class="math inline">\((X,Y)\)</span>.</li>
 <li>Calculer <span class="math inline">\(P(Y=6)\)</span>.</li>
-<li>Montrer que <span class="math display">\[P(Y=0)= \frac{q}{6} \big(\frac{1-q^6}{1-q}\big)\]</span> <strong>Rappel</strong>: <span class="math inline">\(\displaystyle \sum_{i=0}^{n} x^i = \frac{1-x^{n+1}}{1-x}\)</span> si <span class="math inline">\(x\neq 1\)</span>.</li>
+<li>Montrer que <span class="math display">\[P(Y=0)= \frac{q}{6} \big(\frac{1-q^6}{1-q}\big)\]</span>
+</li>
+</ol>
+<div class="callout callout callout-style-simple no-icon">
+<div class="callout-body d-flex">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-body-container">
+<p><strong>Rappel</strong>: <span class="math inline">\(\displaystyle \sum_{i=0}^{n} x^i = \frac{1-x^{n+1}}{1-x}\)</span> si <span class="math inline">\(x\neq 1\)</span>.</p>
+</div>
+</div>
+</div>
+<ol start="5" type="1">
 <li>Sachant que l’on a obtenu aucun pile au cours du jeu, quelle était la probabilité que le résultat du dé était <span class="math inline">\(1\)</span>? Évaluer cette quantité quand <span class="math inline">\(p=q=\frac{1}{2}\)</span>.</li>
 </ol>
 </div>
