--- a/courses/ProbasEfreiS3/exos1_en.html
+++ b/courses/ProbasEfreiS3/exos1_en.html
@@ -163,7 +163,7 @@ ul.task-list li input[type="checkbox"] {
   <li><a href="#probability" id="toc-probability" class="nav-link" data-scroll-target="#probability">Probability</a></li>
   <li><a href="#bayes" id="toc-bayes" class="nav-link" data-scroll-target="#bayes">Bayes</a></li>
   <li><a href="#discrete-random-variables" id="toc-discrete-random-variables" class="nav-link" data-scroll-target="#discrete-random-variables">Discrete random variables</a></li>
-  <li><a href="#lois-usuelles-discr%C3%A8tes" id="toc-lois-usuelles-discrètes" class="nav-link" data-scroll-target="#lois-usuelles-discr%C3%A8tes">Lois usuelles discrètes</a></li>
+  <li><a href="#common-discrete-distributions" id="toc-common-discrete-distributions" class="nav-link" data-scroll-target="#common-discrete-distributions">Common discrete distributions</a></li>
   <li><a href="#exercices-suppl%C3%A9mentaires" id="toc-exercices-supplémentaires" class="nav-link" data-scroll-target="#exercices-suppl%C3%A9mentaires">Exercices supplémentaires</a></li>
   </ul></nav>
     </div>
@@ -429,102 +429,117 @@ ul.task-list li input[type="checkbox"] {
 <li><p>Are the variables <span class="math inline">\(X\)</span> and <span class="math inline">\(Y\)</span> independent?</p></li>
 </ol>
 </div>
-</section><section id="lois-usuelles-discrètes" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="lois-usuelles-discrètes">Lois usuelles discrètes</h2>
+</section><section id="common-discrete-distributions" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="common-discrete-distributions">Common discrete distributions</h2>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 19 </strong></span>Une urne contient 2 boules de numéro 20, 4 boules de numéro 10 et 4 boules de numéro 5.</p>
+<p><span class="theorem-title"><strong>Exercice 19 </strong></span>An urn contains 2 balls with number 20, 4 balls with number 10 and 4 balls with number 5.</p>
 <ol type="1">
-<li><p>Une épreuve consiste à tirer simultanément 3 boules de l’urne. Calculer la probabilité <span class="math inline">\(p\)</span> que la somme des numéros tirés soit égale à 30.</p></li>
+<li><p>A random expreminet consists in drawing simultaneously 3 balls from the urn. Calculate the probability <span class="math inline">\(p\)</span> that the sum of the drawn numbers is equal to 30.</p></li>
 <li>
-<p>On répéte cette épreuve 4 fois en remettant à chaque fois les trois boules tirés dans l’urne. Soit <span class="math inline">\(X\)</span> la v.a. indiquant le nombre de tirages donnant une somme de numéros égale à 30.</p>
-<ol type="1">
-<li><p>Quelle la loi de <span class="math inline">\(X\)</span>. Donner son espérance et son écart-type.</p></li>
-<li><p>Déterminer la probabilité d’avoir au moins une fois la somme 30 dans les 4 tirages.</p></li>
+<p>This experiment is repeated 4 times, putting the three balls drawn back into the urn after each trial. Let <span class="math inline">\(X\)</span> be the random variable corresponding to the number of draws giving a sum of 30.</p>
+<ol type="a">
+<li>What is the distribution of <span class="math inline">\(X\)</span>. Give its expected value and standard deviation.</li>
+<li>Calculate the probability of having at least once the sum 30 out of 4 draws.</li>
 </ol>
 </li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 20 </strong></span>Vous avez besoin d’une personne pour vous aider à déménager. Quand vous téléphonez à un ami, il y a une chance sur quatre qu’il accepte. Soit <span class="math inline">\(X\)</span> la variable aléatoire qui représente le nombre d’amis que vous devrez contacter pour obtenir cette aide.</p>
+<p><span class="theorem-title"><strong>Exercice 20 </strong></span>You need someone to help you move. When you call a friend, there’s a one out of four chances he will accept. Let <span class="math inline">\(X\)</span> be the random variable that represents the number of friends you will need to contact for getting help.</p>
 <ol type="1">
-<li><p>Déterminer la loi de probabilité de <span class="math inline">\(X\)</span>.</p></li>
-<li><p>Calculer <span class="math inline">\(P(X\leq 3)\)</span>.</p></li>
-<li><p>Calculer <span class="math inline">\(E(X)\)</span>.</p></li>
+<li>What is the probability distribution of <span class="math inline">\(X\)</span>.</li>
+<li>Calculate <span class="math inline">\(P (X \leq 3)\)</span>.</li>
+<li>Calculate <span class="math inline">\(E(X)\)</span>.</li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 21 </strong></span>Pour être sélectionné aux jeux olympiques, un athlète doit réussir deux fois à dépasser les minima fixés par sa fédération. Il a une chance sur trois de réussir à chaque épreuve à laquelle il participe. On note <span class="math inline">\(X\)</span> la variable aléatoire qui représente le nombre d’épreuves auxquelles il devra participer pour être sélectionné.</p>
+<p><span class="theorem-title"><strong>Exercice 21 </strong></span>In order to be selected for the Olympic Games, an athlete must succeed twice in exceeding the minima set by his federation. He has a one in three chance of succeeding in every event he participates in. We consider <span class="math inline">\(X\)</span> the random variable that represents the number of his trials until he is selected.</p>
 <ol type="1">
-<li><p>Déterminer la loi de probabilité de <span class="math inline">\(X\)</span>.</p></li>
-<li><p>Si cet athlète ne peut participer qu’à quatre épreuves maximum, quelle est la probabilité qu’il soit sélectionné ?</p></li>
+<li><p>Determine the probability distribution of <span class="math inline">\(X\)</span>.</p></li>
+<li><p>If this athlete can only participate in four events maximum, what is the probability that he will be selected ?</p></li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 22 </strong></span>Un sac contient cinq jetons : deux sont numérotés 1 et les trois autres sont numérotés 2. On effectue une série illimitée de tirages avec remise d’un jeton dans le sac S. On désigne par <span class="math inline">\(Y\)</span> la variable aléatoire égale au nombre de tirages effectués avant le tirage amenant un jeton numéroté 1 pour la première fois.</p>
+<p><span class="theorem-title"><strong>Exercice 22 </strong></span>A bag contains five tokens: two are numbered 1 and the other three are numbered 2. An unlimited series of draws is made with a token being handed over in the bag. The random variable representing the number of draws before getting a token numbered 1 for the first time is denoted by <span class="math inline">\(Y\)</span>.</p>
 <ol type="1">
 <li><ol type="1">
-<li><p>Justifier que la variable aléatoire <span class="math inline">\(Z=Y+1\)</span> suit une loi usuelle que l’on précisera.</p></li>
-<li><p>En déduire la loi de probabilité de <span class="math inline">\(Y\)</span>.</p></li>
+<li>Justify that the random variable <span class="math inline">\(Z = Y + 1\)</span> follows a common distribtion.</li>
+<li>Deduce the probability distribution of <span class="math inline">\(Y\)</span>.</li>
 </ol></li>
 <li><ol type="1">
-<li><p>Préciser l’espérance mathématique et la variance de <span class="math inline">\(Z\)</span>.</p></li>
-<li><p>En déduire l’espérance mathématique et la variance de <span class="math inline">\(Y\)</span>.</p></li>
+<li>Calculate the expected value and variance of <span class="math inline">\(Z\)</span>.</li>
+<li>Calculate the expected value and variance of <span class="math inline">\(Y\)</span>.</li>
 </ol></li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 23 </strong></span>Le nombre de pannes d’électricité qui se produisent dans une certaine région au cours d’une période d’un an suit une loi de Poisson de paramètre <span class="math inline">\(\lambda=3\)</span>.</p>
+<p><span class="theorem-title"><strong>Exercice 23 </strong></span>The number of power outages that occur in a certain region over a one-year timeframe follows a Poisson distribution of parameter <span class="math inline">\(\lambda=3\)</span>.</p>
 <ol type="1">
-<li><p>Calculer la probabilité qu’au cours d’une période d’un an il y a exactement une panne qui se produit.</p></li>
-<li><p>En supposant l’indépendance des pannes d’une année à l’autre, calculer la probabilité qu’au cours des dix prochaines années il y ait au moins une année pendant laquelle il se produira exactement une panne.</p></li>
+<li><p>Calculate the probability that within a period of one year only one failure occurs.</p></li>
+<li><p>Assuming there is an independence of number of outages from one year to another, calculate the probability that in the upcoming ten years there will be at least one year in which exactly one failure occurs.</p></li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 24 </strong></span>Un poste de radio a 2 types de pannes: transistor ou condensateur. Durant la première année d’utilisation, on désigne par:</p>
-<p><span class="math inline">\(X=\)</span> nombre de pannes dues à une défaillance de transistor.<br><span class="math inline">\(Y=\)</span> nombre de pannes dues à une défaillance de condensateur.</p>
-<p>On suppose que <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> sont des v.a. indépendantes suivant des lois de Poisson de paramètres respectives <span class="math inline">\(\lambda=2\)</span> et <span class="math inline">\(\mu=1\)</span>.</p>
+<p><span class="theorem-title"><strong>Exercice 24 </strong></span>A radio has 2 types of failures: transistor or capacitor. During the first year of use, we note:</p>
+<ul>
+<li><p><span class="math inline">\(X\)</span> = number of failures due to transistor failure.</p></li>
+<li><p><span class="math inline">\(Y\)</span> = number of failures due to capacitor failure.</p></li>
+</ul>
+<p>It is assumed that <span class="math inline">\(X\)</span> and <span class="math inline">\(Y\)</span> are independent random variables following Poisson distribution of respective parameters <span class="math inline">\(\lambda=2\)</span> and <span class="math inline">\(\mu=1\)</span>.</p>
 <ol type="1">
-<li><p>Calculer la probabilité qu’il y ait 2 pannes dues à une défaillance de transistor.</p></li>
-<li><p>Calculer la probabilité qu’il y ait au moins une panne due à une défaillance de condensateur.</p></li>
+<li><p>Calculate the probability that there are 2 failures due to a transistor failure.</p></li>
+<li><p>Calculate the probability that there will be at least one failure due to a capacitor failure .</p></li>
 <li><ol type="1">
-<li><p>Quelle est la loi du nombre <span class="math inline">\(Z=X+Y\)</span> de pannes durant la première année ?</p></li>
-<li><p>Déterminer la probabilité qu’il y ait 2 pannes de type quelconque.</p></li>
-<li><p>Calculer <span class="math inline">\(P(Z=3)\)</span>. Que peut-on remarquer ?</p></li>
-<li><p>Décrire les variations de <span class="math inline">\(P(Z=k)\)</span> en fonction de <span class="math inline">\(k\)</span>.</p></li>
-<li><p>Donner le nombre moyen de pannes et la probabilité qu’il y ait au plus une panne durant cette période.</p></li>
+<li>What is the distribution of <span class="math inline">\(Z = X + Y\)</span>, the number of failures during the first year ?</li>
+<li>Determine the probability that there will be 2 failures of any type.</li>
+<li>Calculate <span class="math inline">\(P (Z = 3)\)</span>. What do you notice ?</li>
+<li>Describe the variations of <span class="math inline">\(P (Z = k)\)</span> in function of <span class="math inline">\(k\)</span>.</li>
+<li>Give the average number of failures and the probability that there will be at most one failure during this period.</li>
 </ol></li>
 </ol>
 </div>
 </section><section id="exercices-supplémentaires" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="exercices-supplémentaires">Exercices supplémentaires</h2>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 25 </strong></span>Soient <span class="math inline">\(X\)</span> et <span class="math inline">\(Y\)</span> deux v.a.r. indépendantes vérifiant:</p>
+<p><span class="theorem-title"><strong>Exercice 25 </strong></span>Let <span class="math inline">\(X\)</span> and <span class="math inline">\(Y\)</span> two independent random variables such that:</p>
 <p><span class="math display">\[P(X=n) = P(Y=n) = \frac{1}{4} (\frac{1+a^n}{n!}) \quad \forall n \in \mathbb{N}\]</span></p>
 <ol type="1">
-<li>Déterminer <span class="math inline">\(a\)</span>.</li>
-<li>Calculer <span class="math inline">\(E(X)\)</span> et <span class="math inline">\(E(Y)\)</span>.</li>
-<li>Déterminer la loi de <span class="math inline">\(Z=X+Y\)</span>.</li>
+<li>Calculate <span class="math inline">\(a\)</span>.</li>
+<li>Calculate <span class="math inline">\(E(X)\)</span> and <span class="math inline">\(E(Y)\)</span>.</li>
+<li>Determine the distribution of <span class="math inline">\(Z=X+Y\)</span>.</li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 26 </strong></span>Soit <span class="math inline">\((X,Z)\)</span> un couple de variables aléatoires à valeurs dans <span class="math inline">\(\mathbb{N}\)</span>. On pose</p>
-<p><span class="math display">\[p_{k,n} = P(X=k,Z=n)= \frac{\lambda^n e^{-\lambda} \alpha^k (1-\alpha)^{n-k}}{k! (n-k)!}
-\times {1}_{\{0\leq k\leq n\}}\]</span></p>
+<p><span class="theorem-title"><strong>Exercice 26 </strong></span>Let <span class="math inline">\((X,Z)\)</span> a pair of random variables defined on <span class="math inline">\(\mathbb{N}\)</span>. Let</p>
+<p><span class="math display">\[p_{k,n} = P(X=k,Z=n)= \frac{\lambda^n e^{-\lambda} \alpha^k (1-\alpha)^{n-k}}{k! (n-k)!} \times {1}_{\{0\leq k\leq n\}}\]</span></p>
 <ol type="1">
-<li>Calculer et reconnaitre la loi de <span class="math inline">\(Z\)</span>. Donner l’espérance de <span class="math inline">\(Z\)</span>.</li>
-<li>Calculer et reconnaitre la loi de <span class="math inline">\(X\)</span>.</li>
-<li>Calculer <span class="math inline">\(P(X=k | Z=n)\)</span> et reconnaitre la loi.</li>
-<li>On fait l’hypothèse que <span class="math inline">\(Z\)</span> est le nombre d’enfants d’une famille, <span class="math inline">\(X\)</span> le nombre de garçons et la probabilité qu’un enfant est un garçon est <span class="math inline">\(0.53\)</span>. Soit <span class="math inline">\(Y\)</span> le nombre de filles dans la famille. Calculer et reconnaitre la loi de <span class="math inline">\(Y\)</span>.</li>
-<li>Interpréter les résultats trouvés. Est ce par hasard qu’on reconnait ces lois?</li>
+<li>Calculate and recognize the distribution of <span class="math inline">\(Z\)</span>. What is the expected value of <span class="math inline">\(Z\)</span>.</li>
+<li>Calculate and recognize the distribution of <span class="math inline">\(X\)</span>.</li>
+<li>Calculate <span class="math inline">\(P(X=k | Z=n)\)</span> and recognize its distribution.</li>
+<li>Suppose that <span class="math inline">\(Z\)</span> is the number of kids in a famile, <span class="math inline">\(X\)</span> the number of boys while the probability that a kid is a boy is <span class="math inline">\(0.53\)</span>. Let <span class="math inline">\(Y\)</span> the number of girls in the family. What is the distribution of <span class="math inline">\(Y\)</span>.</li>
+<li>Interpret the results.</li>
 </ol>
 </div>
 <div id="exr-" class="theorem exercise">
-<p><span class="theorem-title"><strong>Exercice 27 </strong></span>Un joueur dispose d’un dé et d’une pièce. Le dé est équilibré et la pièce a une probabilité <span class="math inline">\(p\)</span> (<span class="math inline">\(0 &lt; p &lt; 1\)</span>) de tomber sur pile. On note <span class="math inline">\(q=1-p\)</span>. Le joueur lance d’abord le dé, puis lance la pièce autant de fois que le résultat du dé. Il compte enfin le nombre de piles obtenu au cours des lancers. Les résultats de chaque lancer sont indépendants.</p>
-<p>On note <span class="math inline">\(X\)</span> la variable aléatoire correspondant à la valeur du dé et <span class="math inline">\(Y\)</span> celle correspondant au nombre de piles obtenus à la fin du jeu.</p>
+<p><span class="theorem-title"><strong>Exercice 27 </strong></span>A player has a die and a coin. The die is fait while the coin has probability <span class="math inline">\(p\)</span> (<span class="math inline">\(0 &lt; p &lt; 1\)</span>) of having a head. We note <span class="math inline">\(q=1-p\)</span>. This player throws first the die, then flips the coin as much as the obtained number with the die. At the end, he counts the number of obtained heads. The results of every trial are independant.</p>
+<p>Let <span class="math inline">\(X\)</span> the number obtained from the die and <span class="math inline">\(Y\)</span> the number of obtained heads at the end of the game.</p>
 <ol type="1">
-<li>Soit <span class="math inline">\((i,j) \, \in \, \{1,\ldots,6\} \times \{0,\ldots,6\}\)</span>. Que vaut <span class="math inline">\(P(Y=j|X=i)\)</span>.</li>
-<li>Déterminer la loi du couple <span class="math inline">\((X,Y)\)</span>.</li>
-<li>Calculer <span class="math inline">\(P(Y=6)\)</span>.</li>
-<li>Montrer que <span class="math display">\[P(Y=0)= \frac{q}{6} \big(\frac{1-q^6}{1-q}\big)\]</span> <strong>Rappel</strong>: <span class="math inline">\(\displaystyle \sum_{i=0}^{n} x^i = \frac{1-x^{n+1}}{1-x}\)</span> si <span class="math inline">\(x\neq 1\)</span>.</li>
-<li>Sachant que l’on a obtenu aucun pile au cours du jeu, quelle était la probabilité que le résultat du dé était <span class="math inline">\(1\)</span>? Évaluer cette quantité quand <span class="math inline">\(p=q=\frac{1}{2}\)</span>.</li>
+<li>Let <span class="math inline">\((i,j) \, \in \, \{1,\ldots,6\} \times \{0,\ldots,6\}\)</span>. Calculate <span class="math inline">\(P(Y=j|X=i)\)</span>.</li>
+<li>Determine the distribution of <span class="math inline">\((X,Y)\)</span>.</li>
+<li>Calculate <span class="math inline">\(P(Y=6)\)</span>.</li>
+<li>Show that <span class="math display">\[P(Y=0)= \frac{q}{6} \big(\frac{1-q^6}{1-q}\big)\]</span>
+</li>
+</ol>
+<div class="callout callout callout-style-simple no-icon">
+<div class="callout-body d-flex">
+<div class="callout-icon-container">
+<i class="callout-icon no-icon"></i>
+</div>
+<div class="callout-body-container">
+<p><strong>Remark</strong>: <span class="math inline">\(\displaystyle \sum_{i=0}^{n} x^i = \frac{1-x^{n+1}}{1-x}\)</span> if <span class="math inline">\(x\neq 1\)</span>.</p>
+</div>
+</div>
+</div>
+<ol start="5" type="1">
+<li>Given that the player didn’t obtain any head during the game, what is that probability that he obtained 1 by throwing the die ? Calculate this probability if <span class="math inline">\(p=q=\frac{1}{2}\)</span>.</li>
 </ol>
 </div>
 
