--- a/courses/ProbasEfreiS3/appendix.html
+++ b/courses/ProbasEfreiS3/appendix.html
@@ -109,12 +109,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos1.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [Fr]</a>
+  <a href="./exos1.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [🇫🇷]</a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos1_en.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [En]</a>
+  <a href="./exos1_en.html" class="sidebar-item-text sidebar-link">Exercises Sheet 1 [🇬🇧]</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -129,12 +129,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos2.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [Fr]</a>
+  <a href="./exos2.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [🇫🇷]</a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos2_en.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [En]</a>
+  <a href="./exos2_en.html" class="sidebar-item-text sidebar-link">Exercises Sheet 2 [🇬🇧]</a>
   </div>
 </li>
         <li class="sidebar-item sidebar-item-section">
@@ -828,7 +828,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script><nav class="page-navigation"><div class="nav-page nav-page-previous">
       <a href="./exos2_en.html" class="pagination-link">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Feuille d’Exercices 2 [En]</span>
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Exercises Sheet 2 [🇬🇧]</span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
