--- a/courses/ProbasEfreiS3/exos2_en.html
+++ b/courses/ProbasEfreiS3/exos2_en.html
@@ -126,12 +126,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos1.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [Fr]</a>
+  <a href="./exos1.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [🇫🇷]</a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos1_en.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [En]</a>
+  <a href="./exos1_en.html" class="sidebar-item-text sidebar-link">Exercises Sheet 1 [🇬🇧]</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -146,12 +146,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos2.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [Fr]</a>
+  <a href="./exos2.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [🇫🇷]</a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos2_en.html" class="sidebar-item-text sidebar-link active">Feuille d’Exercices 2 [En]</a>
+  <a href="./exos2_en.html" class="sidebar-item-text sidebar-link active">Exercises Sheet 2 [🇬🇧]</a>
   </div>
 </li>
         <li class="sidebar-item sidebar-item-section">
@@ -195,331 +195,6 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
-
-<!-- 
-
-## Variables alétoires continues {-}
-
-::: {#exr-}
-Soit $X$ une v.a.c. de densité $f$ définie par:
-$f(x) = k x \times {1}_{]0,2[} (x)$.
-
-1.  Déterminer la constante $k$.
-
-2.  Calculer $E(X)$ et $E(X^2)$.
-
-3.  On pose $Z=X^2$. Déterminer la densité de $Z$. Calculer $E(Z)$.
-
-:::
-
-
-::: {#exr-}
-Soit $X$ une variable aléatoire continue dont la fonction de densité est
-donnée par:
-
-$$f(x)= \left\lbrace
-      \begin{array}{ll}
-      c(1-x^2)  & \mbox{si} \quad -1<x<1\\
-      0 & \mbox{sinon} 
-      \end{array}
-  \right.$$
-
-1.  Quelle est la valeur de $c$?
-
-2.  Quelle est la fonction de répartition de $X$?
-
-:::
-
-
-::: {#exr-}
-Soit $X$ une variable aléatoire continue dont la fonction de densité est
-donnée par: $$f(x)= \left\lbrace
-      \begin{array}{ll}
-      0  & \mbox{si} \quad |x| > k > 0\\
-      x+1 & \mbox{si} \quad |x| \le k
-      \end{array}
-  \right.$$
-
-1.  Déterminer $k$.
-
-2.  Calculer $E(X)$ et $E(X^2)$.
-
-3.  Déterminer la fonction de répartition de $X$.
-
-4.  Soit $Y=X^2$. Déterminer la fonction de répartition ainsi que la
-    fonction de densité de $Y$.
-
-5.  Calculer $E(Y)$.
-
-:::
-
-
-:::{exercise, name="Variable aléatoire de densité paire"}
-Soit $X$ une variable aléatoire réelle admettant une fonction **paire**
-$f$ pour densité.
-
-1.  Calculer $P(X \le 0)$ et $P(X\ge 0)$.
-
-2.  Montrer que la fonction de répartition $F$ de $X$ vérifie:
-    $\forall \, x \in \mathbb{R}, F(x)=1-F(-x)$.
-
-3.  On admet que $X$ admet une espérance, calculer $E(X)$.
-
-4.  Donner un exemple de densité paire.
-
-:::
-
-#### Table de la loi Normale Centrée Réduite {-}
-
-::: {#exr-}
-On note $\Phi$ la fonction de répartition de la loi normale centrée
-réduite.
-
-1.  Soit $X$ une v.a. qui suit une loi normale centrée réduite, i.e.
-    $X \thicksim \mathcal{N}(0,1)$. A l’aide de la table de la loi
-    normale, calculer: $P(X>2), P(-1<X<1.5)$ et $P(X<0.5)$.
-
-2.  Soit $Y$ une v.a. qui suite une loi normale:
-    $Y  \thicksim \mathcal{N}(\mu,\sigma^2)=\mathcal{N}(4,16)$.
-    Calculer: $P(Y>2), P(-1<Y<1.5)$ et $P(Y<0.5)$.
-
-3.  Soit $U  \thicksim \mathcal{N}(6,4)$. Calculer: $P(|U-4|<3)$ et
-    $P( U>6 | U > 3)$.
-
-:::
-
-
-
-::: {#exr-}
-Une machine produit des pièces dont le diamètre $X$ (en cm) est une
-variable aléatoire qui suit une loi normale d’espérance $\mu$ et de
-variance $\sigma^2 = (0.01)^2$. Quelle devrait être la valeur de $\mu$
-de sorte que la probabilité qu’une pièce prise au hasard ait un diamètre
-supérieur à 3 cm, soit inférieure à 0.01?
-  
-:::
-
-
-
-::: {#exr-}
-On envisage de construire à l’entrée d’une caserne une guérite dans
-laquelle pourra s’abriter la sentinelle en cas d’intempéries. Les
-sentinelles sont des appelés dont la taille est approximativement
-distribuée selon une loi normale d’espérance 175cm et d’écart-type 7cm.
-A quelle hauteur minimale doit se trouver le toit de la guérite, pour
-qu’un sentinelle pris au hasard ait une probabilité supérieure à 0.95 de
-s’y tenir debout?
-  
-:::
-
-
-::: {#exr-}
-
-## Loi uniforme et loi exponentielle
-
-Soit $U$ une v.a.c de loi unifrorme sur $[0,1]$. Montrer que la v.a.
-$X= - \ln U$ suit une loi exponentielle.
-
-:::
-
-
-::: {#exr-}
-
-## La loi exponentielle est sans mémoire
-
-On suppose que la durée de vie $D$, en jours, d’une ampoule, est une
-variable aléatoire de loi exponentielle de paramètre $\frac{1}{100}$.
-
-1.  Quelle est la durée de vie moyenne d’une ampoule?
-
-2.  Calculer la fonction de répartition de $D$. En déduire l’expression
-    de $P(D > x)$.
-
-3.  On dit qu’une variable aléatoire est *sans mémoire* si
-    $\forall \, l > 0 \quad P(X \ge n+l|X \ge n)=P(X \ge l)$. Montrer
-    que $D$ est sans mémoire.
-
-4.  Quelle est la probabilité qu’une ampoule dure encore au moins 10
-    jours, sachant qu’à son $n^\text{e}$ jour, elle marche encore?
-
-:::
-
-
-::: {#exr-}
-
-## Lois des v.a.r. `min(X,Y)` et `max(X,Y)`
-
-Soit $X$ et $Y$ deux v.a.c de densités respectives $f_X$ et $f_Y$ et de
-fonctions de répartition respectives $F_X$ et $F_Y$. On suppose que $X$
-et $Y$ sont indépendantes. On pose:
-
-$$Z = max(X,Y) \quad \quad \text{et} \quad \quad  T=min(X,Y)$$
-
-1.  Exprimer les fonctions de répartition de $Z$ et $T$ à l’aide des
-    fonctions de répartition $F_X$ et $F_Y$.
-
-2.  Exprimer une densité de $Z$ et une densité de $T$ à l’aide de
-    $f_X, f_Y, F_X$ et $F_Y$.
-
-:::
-
-
-
-::: {#exr-}
-
-## Minimum et Maximum de deux lois exponentielles
-
-Soit $X_1$ et $X_2$ deux variables aléatoires indépendantes suivant une
-loi exponentielle de paramètres $\lambda_1$ et $\lambda_2$. On pose
-$X = min(X_1,X_2)$.
-
-1.  Montrer que $X$ suit une loi exponentielle de paramètre
-    $\lambda_1 + \lambda_2$.
-
-2.  Deux guichets sont ouverts à une banque. Le temps de service au
-    premier guichet (resp. au deuxième) suit une loi exponentielle de
-    moyenne 20 min (resp. 30 min). Deux client rentrent simultanément,
-    l’un choisit le guicher 1 et l’autre le guichet 2.
-
-    1.  En moyenne, après combien de temps sort le premier?
-
-    2.  En moyenne, après combien de temps sort le dernier?
-
-**Indication:** On pourra utiliser la relation $X_1 + X_2 = min(X_1,X_2) + max(X_1,X_2)$. La somme de deux nombres réels est égale à la somme de leur minimum et de leur maximum.
-    
-:::
-
-::: {#exr-}
-
-## Fonction Gamma (Euler)
-
-La fonction Gamma est définie sur $\mathbb{R}_{+}^*$ par:
-
-$$\Gamma(x) = \int_0^{+\infty} t^{x-1}e^{-t} dt$$
-
-1.  Montrer que $\Gamma(x+1)=x\Gamma(x)$, $\forall \, x >0$.
-
-2.  Exprimer $\Gamma(x+n)$ en fonction de $\Gamma(x)$ pour
-    $n\in \mathbb{N}$.
-
-3.  Calculer $\Gamma(1)$. En déduire $\Gamma(n+1)$ pour
-    $n\in \mathbb{N}$.
-
-4.  En utilisant le changement de variable $t=u^2$, montrer qu’on a:
-    $$\Gamma(x)=2 \int_0^{+\infty} u^{2x-1}e^{-u^2} du$$
-
-5.  On suppose que:
-    $$\int_0^{+\infty} e^{-x^2} dx = \frac{\sqrt{\pi}}{2}$$ Calculer
-    alor $\Gamma(\frac{1}{2})$.
-
-6.  Montrer que
-    $\Gamma(n+\frac{1}{2})=(n-\frac{1}{2})(n-\frac{3}{2})\ldots (\frac{1}{2})\Gamma(\frac{1}{2})$
-
-7.  En déduire la valeur de $\Gamma(n+\frac{1}{2})$.
-
-:::
-
-
-
-::: {#exr-}
-
-## Loi Gamma
-
-Pour $a>0$ et $\lambda>0$, deux constantes réelles, on définit la
-fonction $f_{a,\lambda}$ sur $\mathbb{R}$ par:
-$$\forall \, x \in \mathbb{R}, \quad  f_{a,\lambda} (x)= \frac{\lambda^a}{\Gamma(a)} x^{a-1} e^{-\lambda x} \times {1}_{\mathbb{R}_{+}}(x)$$
-
-1.  Montrer que $f_{a,\lambda}$ est bien une densité d’une v.a. $X$.
-
-2.  Calculer $E(X)$.
-
-:::
-
-
-## Couple de variables aléatoires continues {-}
-
-
-::: {#exr-}
-Soit $(X,Y)$ un couple de variables aléatoires dont la densité jointe
-est définie par: $$f(x,y)= \left\lbrace
-      \begin{array}{ll}
-      \alpha x e^{-y}  & \mbox{si} \quad x \in [0,1], y \in \mathbb{R}_{+} \\
-      0 & \mbox{sinon}
-      \end{array}
-  \right.$$
-
-1.  Déterminer $\alpha$ pour que $f(x,y)$ soit une fonction de densité.
-
-2.  Déterminer les densités marginales de $X$ et $Y$.
-
-3.  $X$ et $Y$ sont elles indépendantes?
-
-:::
-
-::: {#exr-}
-Soit $(X,Y)$ un vecteur aléatoire uniformément distribué dans l’ensemble
-$$D= \{ (x,y) \in \mathbb{R}^2, x\in [0,2] \, \text{et} \, y \in [0,4]\}$$
-
-1.  Déterminer la densité jointe du couple de variables aléatoires
-    $(X,Y)$.
-
-2.  Calculer $P(X \le 1, Y\le 2)$.
-
-3.  Déterminer les densités marginales de $X$ et $Y$. Les v.a. $X$ et
-    $Y$ sont elles indépendantes?
-:::
-
-
-## Exercices supplémentaires {-}
-
-::: {#exr-}
-Exprimer les intégrales suivantes à l'aide de la fonction de répartition $\Phi$ de la loi normale centrée réduite, puis en calculer des valeurs approchées à $10^{-4}$ près:
-
-1. $A=\int_0^1 e^{-\frac{x^2}{2}} dx$
-2. $B=\int_0^2 e^{-2x^2+4x-2} dx$
-:::
-
-::: {#exr-}
-
-**Loi de Laplace**
-
-Soit $c > 0$, une constante réelle. Soit $f$ la fonction définie sur $\mathbb{R}$ par:
-
-$$ \forall \, x \in  \mathbb{R}, \quad f(x) = \frac{c}{2} e^{- c |x|}$$
-
-
-1. Montrer que $f$ est une densité.
-2. Déterminer la fonction de répartition $F$ de $X$.
-3. On admet que $X$ admet une espérance. Calculer $E(X)$.
-4. Déterminer la loi de $Y=|X|$.
-:::
-
-::: {#exr-}
-Soit $f$ la fonction suivante, avec $\lambda > 0$
-
-\[  f(x,y)= \left\lbrace
-      \begin{array}{ll}
-      C e^{-\lambda x}  & \mbox{si} \quad x \geq 0 \quad \text{et} \quad  |y| \leq x \\
-      0 & \mbox{sinon}
-      \end{array}
-  \right.
-\]s
-
-1. A quelles conditions $f$ est elle la densité d'un couple de variable aléatoires réelles $(X,Y)$ à valeurs dans $\mathbb{R}^2$?
-2. Calculer $C$ en fonction de $\lambda$.
-3. Déterminer les lois marginales de $X$ et $Y$. (**Indication**: Vous remarquerez que $Y$ suit la loi de Laplace)
-4. Calculer les espérances mathématiques de $X$ et $Y$.
-:::
-
-::: {#exr-}
-Soient $X$ et $Y$ deux variables aléatoires indépendantes de loi uniforme sur l'intervalle $[0 , 2]$ de $\mathbb{R}$.
-
-1. Quelle est la loi de probabilité de $S = X + Y$?
-2. Calculez $E(S)$ et $V(S)$.
-3. Quelle est la loi de probabilité de $Z = X Y$?
-4. Calculez $E(Z)$ et $V(Z)$.
-:::
- -->
 
 
 
@@ -741,7 +416,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 <nav class="page-navigation">
   <div class="nav-page nav-page-previous">
       <a href="./exos2.html" class="pagination-link">
-        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Feuille d’Exercices 2 [Fr]</span>
+        <i class="bi bi-arrow-left-short"></i> <span class="nav-page-text">Feuille d’Exercices 2 [🇫🇷]</span>
       </a>          
   </div>
   <div class="nav-page nav-page-next">
