--- a/courses/ProbasEfreiS3/index.html
+++ b/courses/ProbasEfreiS3/index.html
@@ -126,12 +126,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos1.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [Fr]</a>
+  <a href="./exos1.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [🇫🇷]</a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos1_en.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [En]</a>
+  <a href="./exos1_en.html" class="sidebar-item-text sidebar-link">Exercises Sheet 1 [🇬🇧]</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -146,12 +146,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos2.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [Fr]</a>
+  <a href="./exos2.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [🇫🇷]</a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos2_en.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [En]</a>
+  <a href="./exos2_en.html" class="sidebar-item-text sidebar-link">Exercises Sheet 2 [🇬🇧]</a>
   </div>
 </li>
         <li class="sidebar-item sidebar-item-section">
@@ -180,7 +180,7 @@ ul.task-list li input[type="checkbox"] {
   <ul>
   <li><a href="#bienvenu" id="toc-bienvenu" class="nav-link active" data-scroll-target="#bienvenu">Bienvenu</a>
   <ul class="collapse">
-  <li><a href="#plan" id="toc-plan" class="nav-link" data-scroll-target="#plan">Plan</a></li>
+  <li><a href="#plan-du-cours-et-supports" id="toc-plan-du-cours-et-supports" class="nav-link" data-scroll-target="#plan-du-cours-et-supports">Plan du cours et Supports</a></li>
   </ul></li>
   </ul>
 </nav>
@@ -230,8 +230,8 @@ voici une solution
 :::
 
  -->
-<section id="plan" class="level2">
-<h2 class="anchored" data-anchor-id="plan">Plan</h2>
+<section id="plan-du-cours-et-supports" class="level2">
+<h2 class="anchored" data-anchor-id="plan-du-cours-et-supports">Plan du cours et Supports</h2>
 <table class="table">
 <thead>
 <tr class="header">
