--- a/courses/ProbasEfreiS3/lois-usuelles-discretes.html
+++ b/courses/ProbasEfreiS3/lois-usuelles-discretes.html
@@ -127,12 +127,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos1.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [Fr]</a>
+  <a href="./exos1.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [🇫🇷]</a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos1_en.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [En]</a>
+  <a href="./exos1_en.html" class="sidebar-item-text sidebar-link">Exercises Sheet 1 [🇬🇧]</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -147,12 +147,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos2.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [Fr]</a>
+  <a href="./exos2.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [🇫🇷]</a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos2_en.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [En]</a>
+  <a href="./exos2_en.html" class="sidebar-item-text sidebar-link">Exercises Sheet 2 [🇬🇧]</a>
   </div>
 </li>
         <li class="sidebar-item sidebar-item-section">
@@ -735,7 +735,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
   <div class="nav-page nav-page-next">
       <a href="./exos1.html" class="pagination-link">
-        <span class="nav-page-text">Feuille d’Exercices 1 [Fr]</span> <i class="bi bi-arrow-right-short"></i>
+        <span class="nav-page-text">Feuille d’Exercices 1 [🇫🇷]</span> <i class="bi bi-arrow-right-short"></i>
       </a>
   </div>
 </nav>
