--- a/courses/ProbasEfreiS3/variables-aleatoires-discretes.html
+++ b/courses/ProbasEfreiS3/variables-aleatoires-discretes.html
@@ -111,12 +111,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos1.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [Fr]</a>
+  <a href="./exos1.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [🇫🇷]</a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos1_en.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 1 [En]</a>
+  <a href="./exos1_en.html" class="sidebar-item-text sidebar-link">Exercises Sheet 1 [🇬🇧]</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -131,12 +131,12 @@ ul.task-list li input[type="checkbox"] {
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos2.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [Fr]</a>
+  <a href="./exos2.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [🇫🇷]</a>
   </div>
 </li>
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="./exos2_en.html" class="sidebar-item-text sidebar-link">Feuille d’Exercices 2 [En]</a>
+  <a href="./exos2_en.html" class="sidebar-item-text sidebar-link">Exercises Sheet 2 [🇬🇧]</a>
   </div>
 </li>
         <li class="sidebar-item sidebar-item-section">
