--- a/courses/ProbasEfreiS3/exos1_en.html
+++ b/courses/ProbasEfreiS3/exos1_en.html
@@ -497,6 +497,19 @@ ul.task-list li input[type="checkbox"] {
 </ol></li>
 </ol>
 </div>
+<div class="callout-important callout callout-style-default callout-captioned">
+<div class="callout-header d-flex align-content-center">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-caption-container flex-fill">
+Solution exercises 23 and 24
+</div>
+</div>
+<div class="callout-body-container callout-body">
+<p><img src="img/Proba_03-10-22/Proba_03-10-22-1.jpg" class="img-fluid"><img src="img/Proba_03-10-22/Proba_03-10-22-2.jpg" class="img-fluid"><img src="img/Proba_03-10-22/Proba_03-10-22-3.jpg" class="img-fluid"></p>
+</div>
+</div>
 </section><section id="exercices-supplémentaires" class="level2 unnumbered"><h2 class="unnumbered anchored" data-anchor-id="exercices-supplémentaires">Exercices supplémentaires</h2>
 <div id="exr-" class="theorem exercise">
 <p><span class="theorem-title"><strong>Exercice 25 </strong></span>Let <span class="math inline">\(X\)</span> and <span class="math inline">\(Y\)</span> two independent random variables such that:</p>
